# secret-agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json  run.js
src/: cli.rs  crypto.rs  error.rs  keychain.rs  main.rs  sanitize.rs  secret_gen.rs  vault.rs
src/commands/: create.rs  delete.rs  env.rs  exec.rs  get.rs  import.rs  inject.rs  list.rs  mod.rs  setup.rs
tests/: bucket_integration.rs  cli_integration.rs
